# Lilith

./: .gitignore  EXAMPLES.md  INSPIRATION.md  README.md  compiler.py  fuk.py  grammar.txt  lexer.py  lilith.py  lilith_grammar.txt  main.fuk  main.yp  nompiler.py  parser.py  syntax.txt  test.li
lilith-interpreter/: CMakeLists.txt  README.md  build.sh  test_new_features.lilith
lilith-interpreter/docs/: STDLIB_CHARTER.md  architecture.md
lilith-interpreter/examples/: 01_hello_world.lilith  02_variables.lilith  03_expressions.lilith  04_control_flow.lilith  05_functions.lilith  06_async.lilith  07_collections.lilith  08_classes.lilith  09_pattern_matching.lilith  10_exceptions.lilith  11_hpc.lilith  12_imports.lilith  13_lambdas.lilith  14_advanced.lilith  15_types.lilith  README.md
lilith-interpreter/src/: main.c
lilith-interpreter/src/lexer/: lexer.c  lexer.h
lilith-interpreter/src/parser/: ast.c  ast.h  parser.c  parser.h
lilith-interpreter/src/runtime/: environment.c  environment.h  gc.c  gc.h  interpreter.c  interpreter.h  value.c  value.h
lilith-interpreter/src/stdlib/: hpc.c  hpc.h  io.c  io.h  json.c  json.h  list.c  list.h  math.c  math.h  meta.c  meta.h  num.c  num.h  os.c  os.h  seq.c  seq.h  string.c  string.h  time.c  time.h
lilith-interpreter/tests/: CMakeLists.txt  test_lexer.c  test_parser.c
